# pyproject.toml
[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ['setuptools >= 42.0.0']
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'sr860-python'
dependencies = ['pyvisa']
requires-python = '>= 3'
authors = [{name = 'Shao Qi Lim', email = 'qiqilsq@gmail.com'}]
description = 'Python driver for Stanford Research Systems SR860 DSP lock-in amplifier instrument.'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE']
classifiers=['Development Status :: 4 - Beta',
			'Intended Audience :: SR860 users',
			'Programming Language :: Python :: 3',
        	'License :: OSI Approved :: MIT License',
        	'Operating System :: OS Independent']

[project.urls]
Repository = 'https://github.com/SQLim/sr860-python'